# company_calc

./: .gitignore  Cargo.toml  README.md
migrations/: 20240509175237_init.down.sql  20240509175237_init.up.sql
src/: app.rs  database.rs  lib.rs  main.rs
src/app/: exports.rs  map.rs  mod.rs  model.rs  operations.rs  table.rs
