[package]
name = "company_calc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.27.2"

eframe = { version = "0.27.2", features = [
    "default",
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
    "persistence"
] }

serde = { version = "1", features = ["derive"] }

egui_extras = { version= "0.27.2", features = ["default", "image"] }

env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }

sqlx = {version = "0.7.4", default-features= false, features = ["runtime-tokio","macros", "sqlite", "migrate"]}

tokio = { version = "1", features = ["rt"] }

strum = { version = "0.26", features = ["derive"] }
rust_xlsxwriter = { version = "0.64.2", features = ["serde"] }
rfd = { version = "0.14.1", default-features = false, features = ["tokio", "xdg-portal"] }
